# IDATT2104

./: .gitignore  README.md
network-common/: Cargo.toml
network-common/src/: bitbuilder.rs  http.rs  lib.rs  thread_pool.rs  websockets.rs
practice-1-threaded-primes/: Cargo.toml
practice-1-threaded-primes/src/: main.rs
practice-2-thread-pool/src/: main.rs  thread_pool.rs
practice-3-multithreaded-server/: Cargo.toml
practice-3-multithreaded-server/assets/: index.html
practice-3-multithreaded-server/src/: http.rs  main.rs  thread_pool.rs
practice-4-udp-server/: Cargo.toml
practice-4-udp-server/src/: main.rs
practice-5-web-code-compiler/backend/: Cargo.toml  runner.Dockerfile  test_program.sh
practice-5-web-code-compiler/backend/programs/: p_adhjh9ny.rs  p_nxi4vevz.rs  p_o9lmkzip.rs  p_omt3o1a1.rs
practice-5-web-code-compiler/backend/src/: main.rs
practice-5-web-code-compiler/frontend/: package-lock.json  package.json
practice-5-web-code-compiler/frontend/src/: App.vue  main.ts
practice-5-web-code-compiler/frontend/src/components/: CodeTerminal.vue
practice-6-websockets/drawing-backend/: Cargo.toml
practice-6-websockets/drawing-backend/src/: main.rs
practice-6-websockets/frontend-drawing/: package.json
practice-6-websockets/frontend-drawing/src/: App.vue
