[package]
name = "practice-5-web-code-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
itertools = "0.10.5"
network-common = { path = "../../network-common" }
sha1 = "0.10.5"

